# ProjectQaAssistant

./: .env  .env.example  .gitignore  docker-compose.yaml
.github/workflows/: desktop-build.yml  quality-gates.yml  workspace-validation.yml
backend/: .env  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt  seed_connectors.json
backend/app/: auth_azure.py  bootstrap.py  db.py  db_indexes.py  deps.py  main.py  models.py  ollama_wait.py  settings.py
backend/scripts/: export_openapi.py  migrate_chat_v2.py  migrate_tool_classes_v1.py  run_backend.py  workspace_remote_write_e2e.py
backend/tests/: test_feature_flags_unittest.py  test_repository_projects_automations_unittest.py  test_repository_runtime_unittest.py  test_request_id_middleware.py  test_runtime_context_unittest.py  test_runtime_routes.py  test_tool_policy_unittest.py  test_tool_runtime_safety_unittest.py  test_workspace_routes.py  test_workspace_service_unittest.py
desktop/: README.md  runtime-profile.example.json  runtime-profile.schema.json
desktop/scripts/: launch-desktop-runtime.mjs  runtime-launch-plan.mjs  runtime-launch-plan.test.mjs
documentation/: README.md
documentation/architecture/: backend.md  frontend.md  overview.md
mongo-init/: 01-indexes.js
web/: .env.example  .env.local  .eslintignore  .eslintrc.json  .prettierrc.json  Dockerfile  next.config.mjs  openapi.json  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
web/src/: auth.ts  (+1 more)
web/src-tauri/: Cargo.toml  tauri.conf.json
web/src-tauri/src/: main.rs
(+300 files in other folders)
